# c_gui_app

./: .gitmodules  CMakeLists.txt  README.md  main.c  palette.h
include/: consts.h  layout.h  palette.h  types.h
include/components/: button.h
src/: consts.c  layout.c  main.c
src/components/: button.c
